[gd_scene load_steps=4 format=3 uid="uid://ctpm5tdrl771f"]

[ext_resource type="Script" uid="uid://d1bedmqvc54pv" path="res://scripts/MainMenu.gd" id="1_h7a2f"]
[ext_resource type="PackedScene" uid="uid://b8hgxnll1bhc8" path="res://scenes/TypeDropper.tscn" id="2_qoqlk"]
[ext_resource type="Texture2D" uid="uid://bii8ld0ebkvcq" path="res://assets/gradient-toxic.jpg" id="4_qoqlk"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 306.0
offset_top = 282.0
offset_right = 306.0
offset_bottom = 282.0
script = ExtResource("1_h7a2f")
game_scene = ExtResource("2_qoqlk")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -306.0
offset_top = -283.0
offset_right = 845.0
offset_bottom = 366.0
texture = ExtResource("4_qoqlk")
expand_mode = 2
stretch_mode = 6

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = -155.0
offset_right = 399.0
offset_bottom = -100.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Type Dropper"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = -6.0
offset_right = 402.0
offset_bottom = 60.0

[node name="ClassicModeBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Classic Mode"

[node name="ClassicModeContainer" type="VBoxContainer" parent="VBoxContainer/ClassicModeBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 181.5
offset_top = -51.5
offset_right = 424.5
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2

[node name="EasyBtn" type="Button" parent="VBoxContainer/ClassicModeBtn/ClassicModeContainer"]
layout_mode = 2
text = "Easy"

[node name="MediumBtn" type="Button" parent="VBoxContainer/ClassicModeBtn/ClassicModeContainer"]
layout_mode = 2
text = "Medium"

[node name="HardBtn" type="Button" parent="VBoxContainer/ClassicModeBtn/ClassicModeContainer"]
layout_mode = 2
text = "Hard"

[node name="RapidModeBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Rapid Mode"

[node name="RapidModeContainer" type="VBoxContainer" parent="VBoxContainer/RapidModeBtn"]
visible = false
layout_mode = 0
offset_left = 319.0
offset_top = -34.0
offset_right = 564.0
offset_bottom = 67.0

[node name="EasyBtn" type="Button" parent="VBoxContainer/RapidModeBtn/RapidModeContainer"]
layout_mode = 2
text = "Easy"

[node name="MediumBtn" type="Button" parent="VBoxContainer/RapidModeBtn/RapidModeContainer"]
layout_mode = 2
text = "Medium"

[node name="HardBtn" type="Button" parent="VBoxContainer/RapidModeBtn/RapidModeContainer"]
layout_mode = 2
text = "Hard"

[node name="SingleLetterBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Single Letter Mode"

[node name="LeaderboardBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Show Leaderboard"

[node name="Versionlbl" type="Label" parent="."]
layout_mode = 0
offset_left = -299.0
offset_top = 333.0
offset_right = -182.0
offset_bottom = 356.0
text = "Alpha - v1.0.0"

[connection signal="pressed" from="VBoxContainer/ClassicModeBtn" to="." method="_on_classic_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ClassicModeBtn/ClassicModeContainer/EasyBtn" to="." method="_on_difficulty_btn_pressed" binds= ["\"easy\""]]
[connection signal="pressed" from="VBoxContainer/ClassicModeBtn/ClassicModeContainer/MediumBtn" to="." method="_on_difficulty_btn_pressed" binds= ["\"medium\""]]
[connection signal="pressed" from="VBoxContainer/ClassicModeBtn/ClassicModeContainer/HardBtn" to="." method="_on_difficulty_btn_pressed" binds= ["\"hard\""]]
[connection signal="pressed" from="VBoxContainer/RapidModeBtn" to="." method="_on_rapid_mode_btn_pressed"]
